css/style.sass
---
---

@import url(http://fonts.googleapis.com/css?family=Roboto|Merriweather:300,700)
// Constants
$heading-font-family: Roboto, 'Helvetica', sans-serif
$body-font-family: Merriweather, 'Times New Roman', serif
$body-text-color: #404041

// Colors
$color-primary: #01cbbf
$color-primary-light: lighten(#01cbbf, 5%)
$color-primary-dark: darken(#01cbbf, 3%)
$color-secondary: #e2e6e6

$space: 20px

body
    font-family: $body-font-family
    color: $body-text-color

h1, h2, h3, h4 
    font-family: $heading-font-family

.post
    h1, h2, h3, h4 
        margin-top: $space*1.5

a 
    color: $color-primary
    transition: color 0.5s, background-color 0.5s, border 0.5s
    &:hover 
        color: darken($color-primary, 10%)
        text-decoration: none
    &:visited
        color: darken($color-primary, 10%)

.btn 
    border: 2px solid $color-primary
    padding: $space/2
    display: inline-block
    &:hover 
        background-color: $color-primary
        color: white 
    &.btn-primary
        background-color: $color-primary
        color: white
        &:hover 
            border-color: darken($color-primary, 20%)
            background-color: darken($color-primary, 20%)

.post-content, .post-list
    img 
        margin: 20px auto
.site-header
    background-color: transparent
    border-bottom: 1px solid $color-primary
    font-family: $heading-font-family

.site-title
    color: $color-primary-dark
    &:visited
        color: $color-primary-dark
.site-nav 
    .page-link
        color: $color-primary-dark

.site-footer
    background-color: $color-secondary
    color: $body-text-color
    .footer-col-wrapper
        color: $body-text-color
    .contact-list, .social-media-list
        a 
            font-weight: normal
    a 
        color: $body-text-color
        font-weight: bold
.post-list 
    h2 a 
        color: $body-text-color
.post-meta
    font-family: $heading-font-family

